package p25package;
syntax = "proto3";

message P25ChannelId {
  enum Type {
    CONTROL        = 0;
    TRAFFIC_DIRECT = 1;
    TRAFFIC_GROUP  = 2;
  }

  Type  type          = 1;
  int32 wacn          = 2;
  int32 systemId      = 3;
  int32 rfSubsystemId = 4;
  int32 siteId        = 5;
  int32 sourceId      = 6;
  int32 destinationId = 7;
  int32 groupId       = 8;
  float frequency     = 9;
}

message P25DataUnit {
  P25ChannelId channelId = 1;
  double       latitude  = 2;
  double       longitude = 3;
  int32        nac       = 4;
  int32        duid      = 5;
  bytes        bytes     = 6;
}

message BaseMessage {
  enum Type {
    P25_DATA_UNIT = 0;
  }

  Type        type        = 1;
  int64       timeMs      = 2;
  P25DataUnit p25DataUnit = 3;
}


